--- a/views/user/setting/profile.pug
+++ b/views/user/setting/profile.pug
@@ -10,8 +10,8 @@ block content
                     h3.menu-header 个人设置
                     a.menu-item.selected 简介
                     a.menu-item(href="/settings/account") 账户
-                    a.menu-item(href="#") 电子邮件
-                    a.menu-item(href="#") 安全
+                    a.menu-item(href="/settings/email") 电子邮件
+                    a.menu-item(href="/settings/privacy") 隐私
             div.user-main.card.p-2
                 div.setting-header
                     h2.setting-header-text 个人资料
