--- a/views/user/collect.pug
+++ b/views/user/collect.pug
@@ -3,12 +3,45 @@ include ../mixins/topic_item
 include ../mixins/page
 
 block user_content
-    if (collections.length != 0)
-        each collect in collections
-            +topic_item(current_user,collect.topic,markdown)
-        +page(page,pages)
+    if (user._id.toString() === current_user._id.toString())
+        if (collections.length != 0)
+            each collect in collections
+                +topic_item(current_user,collect.topic,markdown)
+            +page(page,pages)
+        else
+            div.EmptyState
+                div.EmptyState-inner
+                    img(src="/public/images/error_panfish.png" alt="mascot")
+                    p 空
     else
-        div.EmptyState
-            div.EmptyState-inner
-                img(src="/public/images/error_panfish.png" alt="mascot")
-                p 空
+        if (user.show_collections === 0)
+            if (collections.length != 0)
+                each collect in collections
+                    +topic_item(current_user,collect.topic,markdown)
+                +page(page,pages)
+            else
+                div.EmptyState
+                    div.EmptyState-inner
+                        img(src="/public/images/error_panfish.png" alt="mascot")
+                        p 空
+        else if (user.show_collections === 1)
+            if (user_is_follow)
+                if (collections.length != 0)
+                    each collect in collections
+                        +topic_item(current_user,collect.topic,markdown)
+                    +page(page,pages)
+                else
+                    div.EmptyState
+                        div.EmptyState-inner
+                            img(src="/public/images/error_panfish.png" alt="mascot")
+                            p 空
+            else
+                div.EmptyState
+                    div.EmptyState-inner
+                        img(src="/public/images/error_panfish.png" alt="mascot")
+                        p 该用户设置了ta关注的人才可见！
+        else
+            div.EmptyState
+                div.EmptyState-inner
+                    img(src="/public/images/error_panfish.png" alt="mascot")
+                    p 该用户设置了仅自己可见！
