--- a/views/user/setting/email.pug
+++ b/views/user/setting/email.pug
@@ -19,15 +19,12 @@ block content
                     +alert('danger',error)
                 if (success)
                     +alert('success',success)
-                form.user-profile-form(method="post" action="/settings/account")
+                form.user-profile-form(method="post" action="/settings/email")
                     div.form-group
-                        label.user-profile-label(for="oldPassword") 旧密码
-                        input.form-control.user-profile-input(name="oldPassword" id="oldPassword" type="password" tabindex="2" required)
-                    div.form-group
-                        label.user-profile-label(for="password") 新密码
+                        label.user-profile-label(for="password") 密码
                         input.form-control.user-profile-input(name="password" id="password" type="password" tabindex="2" required)
                     div.form-group
-                        label.user-profile-label(for="rePassword") 确认新密码
-                        input.form-control.user-profile-input(name="rePassword" id="rePassword" type="password" tabindex="2" required)
+                        label.user-profile-label(for="email") 原邮箱地址
+                        input.form-control.user-profile-input(name="email" id="email" type="text" tabindex="2" required)
                     div.form-group
                         input.btn.btn-primary.center-block(type="submit" value="提交")
