--- a/views/user/setting/privacy.pug
+++ b/views/user/setting/privacy.pug
@@ -9,7 +9,8 @@ block content
                 nav.menu
                     h3.menu-header 个人设置
                     a.menu-item(href="/settings/profile") 简介
-                    a.menu-item(href="/settings/account") 账户
+                    a.menu-item(href="/settings/avatar") 头像
+                    a.menu-item(href="/settings/account") 密码
                     a.menu-item(href="/settings/email") 电子邮件
                     a.menu-item.selected 隐私
             div.user-main.card.p-2
