:sparkles: 增加3个小游戏

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -117,3 +117,5 @@ html(lang="en")
                     a(href="/") 帮助
                 li
                     a(href="/") 关于
+
+        block endPublic
