--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,6 +23,51 @@ a:focus {
     color: #0f88eb;
 }
 
+/*.checkerboard*/
+.checkerboard {
+    background: rgba(234, 203, 139, 1);
+    position: relative;
+}
+
+.checkerboard .info-box {
+    display: inline-block;
+    position: absolute;
+    top: 10px;
+    left: 500px;
+}
+
+.checkerboard .info-box button {
+    white-space: nowrap;
+    background-color: rgba(234, 203, 139, 1);
+    color: #0f88eb;
+    border: 1px solid #0f88eb;
+    margin: 1rem auto;
+    font-size: 1.1rem;
+    padding: .5rem 1.3rem;
+    outline: none;
+    transition: background-color .3s, color .3s;
+    cursor: pointer;
+    border-radius: 2px;
+}
+
+.checkerboard .info-box button:hover {
+    background-color: rgba(13, 121, 209, .06);
+}
+.aircraft{
+    text-align: center;
+}
+.aircraft canvas{
+    border: 1px solid #ccc;
+    background: #fff;
+}
+.arkanoid {
+    text-align: center;
+}
+.arkanoid canvas{
+    border: 1px solid #ccc;
+    background: #fff;
+}
+
 /* markdown */
 .markdown-text a {
     margin-left: 5px;
