--- a/views/home.pug
+++ b/views/home.pug
@@ -53,20 +53,20 @@ block content
                                     span.glyphicon.glyphicon-bookmark
                                 span.category-label 精华
                         li.category-item
-                            a(target="_blank")
+                            a(target="_blank" href="/game/five")
                                 span.category-icon
-                                    span.glyphicon.glyphicon-remove
-                                span.category-label X
+                                    span.glyphicon.glyphicon-th-list
+                                span.category-label 五子棋
                         li.category-item
-                            a(target="_blank")
+                            a(target="_blank" href="/game/arkanoid")
                                 span.category-icon
-                                    span.glyphicon.glyphicon-remove
-                                span.category-label X
+                                    span.glyphicon.glyphicon-th-list
+                                span.category-label 打砖块
                         li.category-item
-                            a(target="_blank")
+                            a(target="_blank" href="/game/aircraft")
                                 span.category-icon
-                                    span.glyphicon.glyphicon-remove
-                                span.category-label X
+                                    span.glyphicon.glyphicon-th-list
+                                span.category-label 飞机大战
                 if (current_user)
                     div.author-card.is-placeholder
                     div.card.author-card.js-stuck
