--- a/views/topic/index.pug
+++ b/views/topic/index.pug
@@ -105,10 +105,6 @@ block content
                                 a.btn-normal(href="/topic/" + topic._id + "/edit" data-toggle="tooltip" title="修改")
                                     span.glyphicon.glyphicon-edit
                                     span.count 编辑
-                            li
-                                button.btn-normal(data-topic="delete" data-id= topic._id.toString() data-toggle="tooltip" title="删除")
-                                    span.glyphicon.glyphicon-trash
-                                    span.count 删除
                             if (topic.lock)
                                 li
                                     form(action="/topic/" + topic._id + '/lock' method="post")
@@ -121,6 +117,22 @@ block content
                                         button.btn-normal(data-topic="lock" data-id= topic._id.toString() data-toggle="tooltip" title="锁定")
                                             span.glyphicon.glyphicon-lock
                                             span.count 锁定
+                        if (current_user && (current_user._id.toString() === topic.author._id.toString()||current_user.is_admin))
+                            li
+                                button.btn-normal(data-topic="delete" data-id= topic._id.toString() data-toggle="tooltip" title="删除")
+                                    span.glyphicon.glyphicon-trash
+                                    span.count 删除
+                            if (current_user.is_admin)
+                                li
+                                    form(action="/topic/" + topic._id + '/top' method="post")
+                                        button.btn-normal(data-topic="top" data-id= topic._id.toString() data-toggle="tooltip" title="置顶")
+                                            span.glyphicon.glyphicon-asterisk
+                                            span.count 置顶
+                                li
+                                    form(action="/topic/" + topic._id + '/good' method="post")
+                                        button.btn-normal(data-topic="good" data-id= topic._id.toString() data-toggle="tooltip" title="精华")
+                                            span.glyphicon.glyphicon-plus
+                                            span.count 精华
                         li
                             button.btn-normal(data-toggle="tooltip" title="举报")
                                 span.glyphicon.glyphicon-flag
