--- a/views/user/layout.pug
+++ b/views/user/layout.pug
@@ -52,7 +52,9 @@ block content
                     h1
                         div.nickname(data-toggle="tooltip" title="昵称") #{user.nickname}
                         div.username(data-toggle="tooltip" title="用户名") #{user.username}
-
+                        div.user-badge
+                            if (user.is_admin)
+                                span.label.label-warning 管理员
                 div.user-profile-bio #{user.signature}
                 if (current_user && current_user._id.toString() === user._id.toString())
                     div.user-profile-btn
@@ -81,6 +83,26 @@ block content
                     li
                         span.glyphicon.glyphicon-time
                         span(data-toggle="tooltip" title= formatDate(user.create_at))  创建于 #{user.create_at_ago()}
+                div.admin-btn-group
+                    | 仅管理员可见：
+                    if (user.is_block)
+                        form(action="/user/"+user.username+"/block" method="post")
+                            button.admin-btn 解除封禁
+                    else
+                        form(action="/user/"+user.username+"/block" method="post")
+                            button.admin-btn 封禁
+                    if (user.is_verify)
+                        form(action="/user/"+user.username+"/verify" method="post")
+                            button.admin-btn 取消认证用户
+                    else
+                        form(action="/user/"+user.username+"/verify" method="post")
+                            button.admin-btn 添加认证用户
+                    if (user.is_star)
+                        form(action="/user/"+user.username+"/star" method="post")
+                            button.admin-btn 取消优秀用户
+                    else
+                        form(action="/user/"+user.username+"/star" method="post")
+                            button.admin-btn 添加优秀用户
             div.user-main.card
                 div.user-profile-nav.is-placeholder
                 div.user-profile-nav.js-sticky
